--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     -->
 
     <script src="https://threejs.org/build/three.js"></script>
+    <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 
   </head>
 
