--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <script src="https://threejs.org/build/three.js"></script>
     <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://threejs.org/examples/js/loaders/GLTFLoader.js"></script>
 
   </head>
 
